first working version of the super resolution
